# react-native-crypto-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CryptoLib.podspec  LICENSE  README.md  ReactNativeCryptoLib.podspec  SECURITY.md  eslint.config.mjs  lefthook.yml  package.json  react-native-crypto-lib.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/cpp/: BiometricBackend_android.cpp  JniRethrow.h  SecureKVBackend_android.cpp
android/src/main/java/com/cryptolib/: CryptoLibHDNode.java  CryptoLibModule.java  CryptoLibModule.kt  CryptoLibPackage.kt
android/src/main/java/com/fintoda/reactnativecryptolib/: ReactNativeCryptoLibPackage.kt  SecureKVActivityHolder.kt  SecureKVBridge.kt
android/src/main/res/xml/: secure_kv_data_extraction_rules.xml  secure_kv_full_backup_content.xml
android/src/newarch/: CryptoLibSpec.kt
android/src/oldarch/: CryptoLibSpec.kt
coverage/: clover.xml
coverage/lcov-report/: index.html
cpp/: Aes.cpp  Biometric.cpp  BiometricBackend.h  Bip32.cpp  Bip39.cpp  Common.h  Ecc.cpp  Ecdsa.cpp  Ed25519.cpp  Hash.cpp  Kdf.cpp  Mac.cpp  ReactNativeCryptoLibImpl.cpp  ReactNativeCryptoLibImpl.h  Rng.cpp  Schnorr.cpp  SchnorrInternal.h  SecureKV.cpp  SecureKVBackend.h  SecureKVBackup.cpp  SecureKVCommon.h  SecureKVPassphrase.cpp  SecureKVPassphrase.h  SecureKVSign.cpp  SecureKVSlot.h  Slip39.cpp  react-native-crypto-lib.cpp  react-native-crypto-lib.h
crypto/: rand.c
example/: app.json  global.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/cryptolib/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/fintoda/reactnativecryptolib/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/CryptoLibExample/: AppDelegate.mm  AppDelegate.swift  Info.plist
example/ios/CryptoLibExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeCryptoLibExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeCryptoLibExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeCryptoLibExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeCryptoLibExample.xcscheme
example/ios/ReactNativeCryptoLibExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  Biometric.tsx  Demo.tsx  MenuScreen.tsx  TestGroupScreen.tsx  testVectors.ts
example/src/tests/: aes.ts  asyncOps.ts  biometric.ts  bip32.ts  bip39.ts  ecc.ts  ecdsa.ts  ed25519.ts  harness.ts  hash.ts  index.ts  kdf.ts  mac.ts  rng.ts  schnorr.ts  secureKV.ts  secureKVSign.ts  slip39.ts  webcrypto.ts
ios/: BiometricBackend.mm  CryptoLib.h  CryptoLib.mm  OnLoad.mm  SecureKVBackend.mm
scripts/: patch-codegen.js
src/: NativeCryptoLib.ts  NativeReactNativeCryptoLib.ts  aes.native.tsx  aes.ts  aes.tsx  biometric.native.tsx  biometric.tsx  bip32-utils.ts  bip32.native.tsx  bip32.ts  bip32.tsx  bip39.native.tsx  bip39.ts  bip39.tsx  buffer.tsx  crypto.ts  digest.ts  ecc.native.tsx  ecc.ts  ecc.tsx  ecdsa.native.tsx  ecdsa.ts  ecdsa.tsx  ed25519.native.tsx  ed25519.tsx  errors.ts  hash.native.tsx  hash.tsx  index.ts  index.tsx  kdf.native.tsx  kdf.tsx  mac.native.tsx  mac.tsx  rng.native.tsx  rng.ts  rng.tsx  schnorr.native.tsx  schnorr.ts  schnorr.tsx  (+8 more)
src/__tests__/: bip32-utils.test.ts  errors.test.ts  tiny-secp256k1.test.ts  webcrypto.test.ts
